2010-02-08  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.cs:
	* TemplateBindingExpression.cs: Add a helper method to allow
	  managed code to listen for PropertyChanged events on any DP.
	  Make TemplateBindingExpression use this helper method.

2010-02-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Deployment.cs: Disable parts of r150985, it requires a newer mono
	version to build, but a newer mono version has a bug which makes
	moon unbuildable (bug #574434).

2010-02-06  Chris Toshok  <toshok@ximian.com>

	* Deployment.cs (InitializeDeployment): set the appdomain's
	ApplicationBase to the xap directory so Assembly.Load works.

2010-02-04  Sebastien Pouliot  <sebastien@ximian.com>

	* Application.cs: Add [MonoTODO] to CheckAndDownloadUpdateAsync.
	Do not use EntryPointAssembly DP inside GetResourceStream since
	it can be called outside the main thread.

2010-02-03  Andreia Gaita  <avidigal@novell.com>

	* DependencyProperty.g.cs, Events.g.cs: remove autogenerated files from
	the repo

2010-02-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Duration.cs: Automatic is the default kind.

2010-01-25  Alan McGovern  <amcgovern@novell.com>

	* CheckAndDownloadUpdateCompletedEventArgs.cs: Implement the
	  missing properties for
	  CheckAndDownloadUpdateCompleteEventArgs.

2010-01-21  Alan McGovern  <amcgovern@novell.com>

	* PresentationFrameworkCollection.cs: The hack to emit an
	  Added and Removed event when replacing an item can be
	  removed now that Silverlight has fixed their bug.

2010-01-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Events.g.cs: Regenerated.

2010-01-14  Alan McGovern  <amcgovern@novell.com>

	* DependencyProperty.g.cs: Get rid of some of the bonus API
	  points we've accumulated.

2010-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Deployment.cs: Set the default HTTP[S] stack as the browser

2010-01-12  Alan McGovern  <amcgovern@novell.com>

	* FrameworkElement.cs: Implement support for explicitly